finish documentation.html --> update sliders and formatting of images

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="../img/logo.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="../components/style.css">
     <script src="../components/script.js" defer></script>
-    </head>
+</head>
  <body>
         <!-- Container for the navbar -->
         <div id="navbar-container"></div>
@@ -19,7 +19,7 @@
                     <h2>Allison: Going with the flow.</h2>
                     <p>I'm a student at Boston University, who is just finding their path in life. <br>
                         I am someone who takes on many side quests, and enjoy exploring new hobbies. <br>
-                        I want to use my computer science knoweldge to make a positive impact while fostering a creative outlet.
+                        I want to use my computer science knowledge to make a positive impact while fostering a creative outlet.
                     </p>
                 </div>
                 <div class = "image-container">
