--- a/src/pages/documentation.html
+++ b/src/pages/documentation.html
@@ -30,18 +30,17 @@
     <!-- Include the navigation bar using JavaScript -->
     <div id="navbar-container"></div>
     <!-- Include page title-->
-    <header class="header-documentation">
-        <div class="header-content">
-            <h2 class="custom-header">documentation</h2>
-            <p class="header-description">sharing happy seeds.</p>
-        </div>
-    </header>
     <main>
-        <section id="Friends-family" class="section">
-            <h2>Documentation of loved ones:</h2>
-            <p>I wouldn't be the person I am without my family and friends. 
-                They have played such a pivotal role in my personality.
-                There's nothing like sharing our happiness and memries with one another.</p>
+        <section id="subcategory" class="section">
+            <div class ="content">
+                <h2 class = "subcategory-title">documentation: </h2>
+                <p class = "subcategory-description">planting happy seeds.<br><p>
+                <h2>of loved ones:</h2>
+                <p class="subcategory-description">
+                    I wouldn't be the person I am without my family and friends. 
+                    They have played such a pivotal role in my personality.
+                    There's nothing like sharing our happiness and memories with one another.</p>
+            </div>
         </section>
         <div class="slider-container" id="slider1">
             <div class="slider">
@@ -87,12 +86,15 @@
                     </div>
             </div>
         </div>
-        <section id="Scenery" class="section">
-            <h2>Documentation of landscapes:</h2>
-            <p>I've been given the opportunity to travel around the world and I wanted to share my exerience and joy with others.
-                Leaving home and just exploring, has given me time to self-reflect and view the world in a different light.
-                From these photos, I hope to create the idea that in the grand scheme of things, life is short and we should all take the moment to appreiciate it.
-            </p>
+        <section id="subcategory" class="section">
+            <div class ="content">
+                <h2>of landscapes:</h2>
+                <p class="subcategory-description">
+                    I've been given the opportunity to travel around the world and I wanted to share my exerience and joy with others.
+                    Leaving home and just exploring, has given me time to self-reflect and view the world in a different light.
+                    From these photos, I hope to create the idea that in the grand scheme of things, life is short and we should all take the moment to appreiciate it.
+                </p>
+            </div>
         </section>
         <!-- Gallery using a div container -->
         <div class="slider-container" id="slider2">
