finish layout of movement.html

--- a/src/pages/movement.html
+++ b/src/pages/movement.html
@@ -13,35 +13,35 @@
     <!-- Your content goes here -->
     <!-- Include the navigation bar using JavaScript -->
     <div id="navbar-container"></div>
-       <!-- Include page title-->
-       <header class="header-movement">
-        <div class="header-content">
-            <h2 class="custom-header">movement</h2>
-            <p class="header-description">follow the flow.</p>
-        </div>
-        </header>
-
-    <div class="video-container">
-        <!-- Left video and text -->
-        <div class="video-group">
-            <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/390fQqPsn_8" frameborder="0" allowfullscreen></iframe>
+    <main>
+        <section id="subcategory">
+            <div class ="content">
+                <br><br>
+                <h2 class = "subcategory-title">movement: </h2>
+                <p class = "subcategory-description">follow the flow.<br></p>
+                <br><br>
             </div>
-            <div class="text">
-                <p>Figure Skating to "Lost Boy" by Ruth</p>
-                <p>I've been figure skating since I was six years old and something that's always drawn me in was the artistry utilized to deliver a message.</p>
-            </div>
+        </section>
+        <div id = "subcategory" class = "video-group">
+            <!-- Centered YouTube Video -->
+            <iframe class="youtube-video" width="700px" height="394" src="https://www.youtube.com/embed/390fQqPsn_8?start=11" frameborder="0" allowfullscreen></iframe>
+            <h2>Figure Skating</h2>
+            <p class="subcategory-description">
+                "Lost Boy" - Ruth B. <br>
+                I've been figure skating since I was six years old and 
+                something that's always drawn me in was the artistry utilized to deliver a message.
+            </p>
         </div>
-        <!-- Right video and text -->
-        <div class="video-group">
-            <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/6POzGexsMkA&list=PLdHabHiQpbb4oHYzBRVb4g86Ojo8jbLe_" frameborder="0" allowfullscreen></iframe>            </div>
-            <div class="text">
-                <p>Dancing to k-pop</p>
-            <p>Entering college, I got the opportunity my passion in dnace through the lens of hiphop and k-pop. I also quite enjoy freestyling and just letting the body move.</p>
-            </div>
+        <div id = "subcategory" class = "video-group">
+            <iframe class="youtube-video" width="700" height="394" src="https://www.youtube.com/embed/videoseries?list=PLdHabHiQpbb4oHYzBRVb4g86Ojo8jbLe_" frameborder="0" allowfullscreen></iframe>
+            <h2>Dancing</h2>
+            <p class = "subcategory-description">
+                to kpop. <br> 
+                Entering college, I got the opportunity my passion in dance 
+                through the lens of hiphop and k-pop. I also quite enjoy freestyling and just letting the body move.
+            </p>
         </div>
-    </div>
+    </main>
 </body>
 
 </html>
