--- a/src/pages/testpage.html
+++ b/src/pages/testpage.html
@@ -1,134 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Allison Lu</title>
-    <!--Img size-->
-    <style>
-        /* Optional: Add some basic styling for the gallery */
-        .image-gallery {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-        }
-        .image-gallery img {
-            max-width: 30%;
-            height: auto;
-        }
-        /* Apply a rotation based on the unique ID */
-        #rotateSpecificImage {
-            transform: rotate(90deg);
-        }
-    </style>
-    <link rel="icon" href="../img/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../components/style.css">
-    <script defer src="../components/script.js"></script>
-</head>
-<body>
-    <!-- Your content goes here -->
-    <!-- Include the navigation bar using JavaScript -->
-    <div id="navbar-container"></div>
-    <div class="container">
-        <div class="side-borders"></div>
-        <div class="content-center">
-    <!-- Include page title-->
-            <h2 class="custom-header">documentation</h2>
-            <p class="header-description">sharing happy seeds.</p>
-        </div>
-    </div>
 
-    <main>
-        <section id="Friends-family" class="section">
-            <h2>Documentation of loved ones:</h2>
-            <p>I wouldn't be the person I am without my family and friends. 
-                They have played such a pivotal role in my personality.
-                There's nothing like sharing our happiness and memries with one another.</p>
-        </section>
-        <div class="slider-container" id="slider1">
-            <div class="slider">
-                <button class="prev" onclick="prevSlide(1)">❮</button>
-                <div class="slide" id="slide1a">
-                    <img src="../img/documentation/profile/ireland kat+ting1.JPG" alt="Kat and Ting">
-                </div>
-                <div class="slide" id="slide1b">
-                    <img src="../img/documentation/profile/ireland kat+ting2.JPG" alt="Kat and Ting">
-                </div>
-                <div class="slide" id="slide1c">
-                    <img src="../img/documentation/profile/rian.jpg" alt="Rian">
-                </div>
-                <div class="slide" id="slide1d">
-                    <img src="../img/documentation/profile/vicky.JPG" alt="Vicky">
-                </div>
-                <div class="slide" id="slide1e">
-                    <img src="../img/documentation/profile/grace.JPG" alt="Grace">
-                </div>
-                <div class="slide" id="slide1f">
-                    <img src="../img/documentation/profile/lanlan.jpg" alt="LanLan">
-                </div>
-                <div class="slide" id="slide1g">
-                    <img src="../img/documentation/profile/steph ting julie.jpg" alt="Steph, Ting, Julie">
-                </div>
-                <div class="slide" id="slide1h">
-                    <img id="rotateSpecificImage" src="../img/documentation/profile/rosanna.jpg" alt="Rosanna">
-                </div>
-                <button class="next" onclick="nextSlide(1)">❯</button>
-                <!-- Add more slides as needed -->
-            </div>
-                <div class="thumbnail-container">
-                    <div class="thumbnails" id="thumbnails1">
-                        <img src="../img/documentation/profile/ireland kat+ting1.JPG" alt="Kat and Ting" onclick="currentSlide(1, 1)" class="thumbnail">
-                        <img src="../img/documentation/profile/ireland kat+ting2.JPG" alt="Kat and Ting" onclick="currentSlide(2, 1)" class="thumbnail">
-                        <img src="../img/documentation/profile/rian.jpg" alt="Rian" onclick="currentSlide(3, 1)" class="thumbnail">
-                        <img src="../img/documentation/profile/vicky.jpg" alt="Vicky" onclick="currentSlide(4, 1)" class="thumbnail">
-                        <img src="../img/documentation/profile/grace.jpg" alt="Grace" onclick="currentSlide(5, 1)" class="thumbnail">
-                        <img src="../img/documentation/profile/lanlan.jpg" alt="LanLan" onclick="currentSlide(6, 1)" class="thumbnail">
-                        <img src="../img/documentation/profile/steph ting julie.jpg" alt="Steph, Ting, Julie" onclick="currentSlide(7,1 )" class="thumbnail">
-                        <img id="rotateSpecificImage" src="../img/documentation/profile/rosanna.jpg" alt="Rosanna" onclick="currentSlide(8, 1)" class="thumbnail">
-                        <!-- Add more thumbnails as needed -->
-                    </div>
-            </div>
+<div class="video-container">
+    <!-- Left video and text -->
+    <div class="video-group">
+        <div class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/390fQqPsn_8" frameborder="0" allowfullscreen></iframe>
         </div>
-        <section id="Scenery" class="section">
-            <h2>Documentation of landscapes:</h2>
-            <p>I've been given the opportunity to travel around the world and I wanted to share my exerience and joy with others.
-                Leaving home and just exploring, has given me time to self-reflect and view the world in a different light.
-                From these photos, I hope to create the idea that in the grand scheme of things, life is short and we should all take the moment to appreiciate it.
-            </p>
-        </section>
-        <!-- Gallery using a div container -->
-        <div class="slider-container" id="slider2">
-            <div class="slider">
-                <button class="prev" onclick="prevSlide(2)">❮</button>
-                <div class="slide" id="slide2a">
-                    <img src="../img/documentation/view/beach.jpg" alt="Tahoe beach">
-                </div>
-                <div class="slide" id="slide2b">
-                    <img src="../img/documentation/view/island.jpg" alt="Tahoe island">
-                </div>
-                <div class="slide" id="slide2c">
-                    <img src="../img/documentation/view/montreux.JPG" alt="Montreux">
-                </div>
-                <!-- Add more slides as needed -->
-                <button class="next" onclick="nextSlide(1)">❯</button>
-                
-            </div>
-            <div class="slider-nav">
-                <div class="thumbnail-container">
-                    <div class="thumbnails" id="thumbnails2">
-                        <img src="../img/documentation/view/beach.jpg" alt = "Tahoe beach" onclick="currentSlide(1 ,2)" class="thumbnail">
-                        <img src="../img/documentation/view/island.jpg" alt="Tahoe island" onclick="currentSlide(2, 2)" class="thumbnail">
-                        <img src="../img/documentation/view/montreux.JPG" alt="Montreux" onclick="currentSlide(3, 2)" class="thumbnail">
-                        <!-- Add more thumbnails as needed -->
-                    </div>
-                </div>
-            </div>
+        <div class="text">
+            <p>Figure Skating to "Lost Boy" by Ruth</p>
+            <p></p>
         </div>
     </div>
-    </main>
-</body>
-</html>
-<footer>
-    <p>Contact: allisonlu100@gmail.com</p>
-    <p>Follow me on <a href="https://instagram.com/wholu.moo" target="_blank">instagram</a></p>
-</footer>
+    <!-- Right video and text -->
+    <div class="video-group">
+        <div class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/6POzGexsMkA&list=PLdHabHiQpbb4oHYzBRVb4g86Ojo8jbLe_" frameborder="0" allowfullscreen></iframe>            </div>
+        <div class="text">
+            <p>Dancing to k-pop</p>
+        <p>Entering college, I got the opportunity my passion in dnace through the lens of hiphop and k-pop. I also quite enjoy freestyling and just letting the body move.</p>
+        </div>
+    </div>
+</div>
