--- a/src/pages/illustration.html
+++ b/src/pages/illustration.html
@@ -13,12 +13,9 @@
             gap: 20px;
         }
         .image-gallery img {
+            width: auto; /* Ensure images are responsive */
             max-width: 30%;
             height: auto;
-        }
-        /* Apply a rotation based on the unique ID */
-        #rotateSpecificImage {
-            transform: rotate(90deg);
         }
     </style>
     <!-- Include common structure from index.html -->
@@ -31,22 +28,22 @@
     <!-- Include the navigation bar using JavaScript -->
     <div id="navbar-container"></div>
     <!-- Include header-->
-    <header class="header-about">
-        <div class="header-content">
-            <h2 class="custom-header">illustration</h2>
-            <p class="header-description">Since the pandemic, my interest in sketching and pating have resurfaced. <br>
-                I enter a zone with my music, paints, and canvas where i lose track of time and dive into my break.</p>
-        </div>
-    </header>
     <main>
-        <section id="illustration" class="section">
-            <h2>Artwork:</h2>
+        <section id="subcategory" class = "section">
+            <div class ="content">
+                <h2 class = "subcategory-title">illustration: </h2>
+                <p class = "subcategory-description">one stroke at a time.<br></p>
+                <h2>artwork:</h2>
+                <p class="subcategory-description">
+                Since the pandemic, my interest in sketching and painting have resurfaced. <br>
+                I enter a zone with my music, paints, and canvas where i lose track of time and dive into my break.</p>
+            </div>
         </section>
-        <div class="slider-container" id="slider1">
+        <div class="slider-container" id="slider3">
             <div class="slider">
                 <button class="prev" onclick="prevSlide(1)">❮</button>
                 <div class="slide" id="slide3a">
-                    <img src="../img/documentation/artwork/eye.jpg" alt="Eye Forest">
+                    <img src="../img/documentation/artwork/eye.svg" alt="Eye Forest">
                 </div>
                 <div class="slide" id="slide3b">
                     <img src="../img/documentation/artwork/girl backpack.jpg" alt="Girl with backpack">
@@ -55,18 +52,18 @@
                     <img src="../img/documentation/artwork/lightbulb.jpg" alt="Fish and lightbulb">
                 </div>
                 <div class="slide" id="slide3d">
-                    <img src="../img/documentation/artwork/cherry blossom.jpeg" alt="Cherry Blossoms">
+                    <img src="../img/documentation/artwork/cherry blossom.svg" alt="Cherry Blossoms">
                 </div>
                 <div class="slide" id="slide3e">
                     <img src="../img/documentation/artwork/mountain.jpeg" alt="Mountain">
                 </div>
                 <!-- Add more slides as needed -->
-                <button class="next" onclick="nextSlide(1)">❯</button>
+                <button class="next" onclick="nextSlide(2)">❯</button>
                 
             </div>
             <div class="slider-nav">
                 <div class="thumbnail-container">
-                    <div class="thumbnails" id="thumbnails2">
+                    <div class="thumbnails" id="thumbnails3">
                         <img src="../img/documentation/artwork/eye.jpg" alt="Eye Forest" onclick="currentSlide(1, 3)" class="thumbnail">
                             <img src="../img/documentation/artwork/girl backpack.jpg" alt="Girl with backpack" onclick="currentSlide(2, 3)" class="thumbnail">
                             <img src="../img/documentation/artwork/lightbulb.jpg" alt="Fish and lightbulb" onclick="currentSlide(3, 3)" class="thumbnail">
