finish last minute details on website

--- a/src/pages/journey.html
+++ b/src/pages/journey.html
@@ -45,7 +45,7 @@
                     <div class="image-container">
                         <img class="clickable-image" src="../img/icons/website.png" alt="Website Image">
                     </div>
-                    <div class="content">
+                    <div class="journey-content">
                         <h2>This Website!</h2>
                         <p>HTML, CSS, JavaScript</p>
                     </div>
@@ -57,7 +57,7 @@
                     <div class="image-container">
                         <img class="clickable-image" src="../img/icons/currency-exchange.png" alt="Currency Converter Image">
                     </div>
-                    <div class="content">
+                    <div class="journey-content">
                         <h2>Currency Converter</h2>
                         <p>Java</p>
                     </div>
