--- a/src/pages/illustration.html
+++ b/src/pages/illustration.html
@@ -4,20 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allison Lu</title>
-    <!--Img size-->
-    <style>
-        /* Optional: Add some basic styling for the gallery */
-        .image-gallery {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-        }
-        .image-gallery img {
-            width: auto; /* Ensure images are responsive */
-            max-width: 30%;
-            height: auto;
-        }
-    </style>
     <!-- Include common structure from index.html -->
     <link rel="icon" href="../img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../components/style.css">
@@ -36,23 +22,23 @@
                 <h2>artwork:</h2>
                 <p class="subcategory-description">
                 Since the pandemic, my interest in sketching and painting have resurfaced. <br>
-                I enter a zone with my music, paints, and canvas where i lose track of time and dive into my break.</p>
+                I enter a zone with my music, paints, and canvas where I lose track of time and dive into my break.</p>
             </div>
         </section>
-        <div class="slider-container" id="slider3">
+        <div class="slider-container" id="slider1">
             <div class="slider">
                 <button class="prev" onclick="prevSlide(1)">❮</button>
                 <div class="slide" id="slide3a">
-                    <img src="../img/documentation/artwork/eye.svg" alt="Eye Forest">
+                    <img src="../img/documentation/artwork/eye.jpg" alt="Eye Forest">
                 </div>
                 <div class="slide" id="slide3b">
-                    <img src="../img/documentation/artwork/girl backpack.jpg" alt="Girl with backpack">
+                    <img src="../img/documentation/artwork/girl+backpack.jpg" alt="Girl with backpack">
                 </div>
                 <div class="slide" id="slide3c">
                     <img src="../img/documentation/artwork/lightbulb.jpg" alt="Fish and lightbulb">
                 </div>
                 <div class="slide" id="slide3d">
-                    <img src="../img/documentation/artwork/cherry blossom.svg" alt="Cherry Blossoms">
+                    <img src="../img/documentation/artwork//cherry+blossom.jpeg" alt="Cherry Blossoms">
                 </div>
                 <div class="slide" id="slide3e">
                     <img src="../img/documentation/artwork/mountain.jpeg" alt="Mountain">
@@ -65,14 +51,15 @@
                 <div class="thumbnail-container">
                     <div class="thumbnails" id="thumbnails3">
                         <img src="../img/documentation/artwork/eye.jpg" alt="Eye Forest" onclick="currentSlide(1, 3)" class="thumbnail">
-                            <img src="../img/documentation/artwork/girl backpack.jpg" alt="Girl with backpack" onclick="currentSlide(2, 3)" class="thumbnail">
+                            <img src="../img/documentation/artwork/girl+backpack.jpg" alt="Girl with backpack" onclick="currentSlide(2, 3)" class="thumbnail">
                             <img src="../img/documentation/artwork/lightbulb.jpg" alt="Fish and lightbulb" onclick="currentSlide(3, 3)" class="thumbnail">
-                            <img src="../img/documentation/artwork/cherry blossom.jpeg" alt="Cherry Blossoms" onclick="currentSlide(4, 3)" class="thumbnail">
+                            <img src="../img/documentation/artwork/cherry+blossom.jpeg" alt="Cherry Blossoms" onclick="currentSlide(4, 3)" class="thumbnail">
                             <img src="../img/documentation/artwork/mountain.jpeg" alt="Mountain" onclick="currentSlide(5, 3)" class="thumbnail">
                             <!-- Add more thumbnails as needed -->
                     </div>
                 </div>
             </div>
+            <br>
         </div>
     </main>
 </body>
