change file structure

--- a/index.html
+++ b/index.html
@@ -2,10 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=srs/pages/home.html">
-    <title>Redirecting...</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Allison Lu</title>
+    <link rel="icon" href="../img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="../components/style.css">
+    <script defer src="../components/script.js"></script>
 </head>
 <body>
-    <p>If you are not redirected, <a href="srs/pages/home.html">click here</a>.</p>
+    <!-- Your content goes here -->
+    <!-- Include the navigation bar using JavaScript -->
+    <div id="navbar-container"></div>
+    <!-- Include page title-->
+    <header class="header-home">
+        <div class ="content">
+            <h2 class="custom-header">Introducing Allison</h2>
+            <p class="header-description">as Web Developer &amp; Creative Thinker</p>
+        </div>
+        <div class = "image-container">
+            <img src="../img/SVG/intro sketch.svg" alt="profile pic" class="rounded-image"s>
+        </div>
+    </header>
+    <main>
+        <section id="journey" class="section clickable-section">
+            <h2>journey:</h2>
+            <h4> in software engineering and design</h4>
+        </section>
+        <section id="adventure" class="section clickable-section">
+            <h2>adventure:</h2>
+            <h4> in life</h4>
+        </section>
+        <section id="about-me" class="section clickable-section">
+            <h2>about:</h2>
+            <h4>the real me</h4>
+        </section>
+    </main>
+    <script defer src="../components/script.js"></script>
 </body>
 </html>
+
+<footer>
+    <p>Contact: allisonlu100@gmail.com</p>
+    <p>Follow me on <a href="https://instagram.com/wholu.moo" target="_blank">instagram</a></p>
+</footer>
