--- a/redirection.html
+++ b/redirection.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=srs/pages/home.html">
+    <meta http-equiv="refresh" content="0;url=../website/srs/pages/about.html">
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected, <a href="srs/pages/home.html">click here</a>.</p>
+    <p>If you are not redirected, <a href="../website/src/pages/about.html">click here</a>.</p>
 </body>
 </html>
