--- a/src/pages/documentation.html
+++ b/src/pages/documentation.html
@@ -49,7 +49,7 @@
                     <img src="../img/documentation/profile/vicky.JPG" alt="Vicky">
                 </div>
                 <div class="slide" id="slide1e">
-                    <img src="../img/documentation/profile/grace.JPG" alt="Grace">
+                    <img src="../img/documentation/profile/grace.jpg" alt="Grace">
                 </div>
                 <div class="slide" id="slide1f">
                     <img src="../img/documentation/profile/lanlan.jpg" alt="LanLan">
@@ -68,7 +68,7 @@
                         <img src="../img/documentation/profile/ireland kat+ting1.JPG" alt="Kat and Ting" onclick="currentSlide(1, 1)" class="thumbnail">
                         <img src="../img/documentation/profile/ireland kat+ting2.JPG" alt="Kat and Ting" onclick="currentSlide(2, 1)" class="thumbnail">
                         <img src="../img/documentation/profile/rian.jpg" alt="Rian" onclick="currentSlide(3, 1)" class="thumbnail">
-                        <img src="../img/documentation/profile/vicky.jpg" alt="Vicky" onclick="currentSlide(4, 1)" class="thumbnail">
+                        <img src="../img/documentation/profile/vicky.JPG" alt="Vicky" onclick="currentSlide(4, 1)" class="thumbnail">
                         <img src="../img/documentation/profile/grace.jpg" alt="Grace" onclick="currentSlide(5, 1)" class="thumbnail">
                         <img src="../img/documentation/profile/lanlan.jpg" alt="LanLan" onclick="currentSlide(6, 1)" class="thumbnail">
                         <img src="../img/documentation/profile/steph ting julie.jpg" alt="Steph, Ting, Julie" onclick="currentSlide(7,1 )" class="thumbnail">
