add the information for credit card fraud

--- a/src/pages/coding-projects.html
+++ b/src/pages/coding-projects.html
@@ -23,7 +23,7 @@
     <section id="website" class="section clickable-section">
         <div class="project-unit">
             <div class="image-container">
-                <img class="clickable-image" src="../img/website.png" alt="Website Image">
+                <img class="clickable-image" src="../img/icons/website.png" alt="Website Image">
             </div>
             <div class="content">
                 <h2>This Website!</h2>
@@ -35,7 +35,7 @@
     <section id="currency-exchange" class="section clickable-section">
         <div class="project-unit">
             <div class="image-container">
-                <img class="clickable-image" src="../img/currency-exchange.png" alt="Currency Converter Image">
+                <img class="clickable-image" src="../img/icons/currency-exchange.png" alt="Currency Converter Image">
             </div>
             <div class="content">
                 <h2>Currency Converter</h2>
