--- a/src/pages/journey.html
+++ b/src/pages/journey.html
@@ -64,6 +64,19 @@
                 </div>
             </section>
         </div>
+        <div class="centered-container">
+            <section id="fraud" class="section clickable-section">
+                <div class="project-unit">
+                    <div class="image-container">
+                        <img class="clickable-image" src="../img/icons/fraud.png" alt="Fraud Image">
+                    </div>
+                    <div class="content">
+                        <h2>Credit Card Fraud Detection</h2>
+                        <p>Python, K-Neighbors Neighbors, Jupyter Notebook</p>
+                    </div>
+                </div>
+            </section>
+        </div>
 
         <!--
         <section id="design" class="section clickable-section">
