WHOBao edit for UX progress

--- a/src/pages/WHOBao.html
+++ b/src/pages/WHOBao.html
@@ -54,7 +54,7 @@
             <h2>Goal</h2>
             <p> Allow students and remote workers to request or reserve guarantee seating for a duration
                 in order to efficiently do their work, thus enhancing the user experience in a busy bakery. <br>
-                Our WhoBao Bakery website will let users know current available drinks/baked goods and hold the 
+                Statement: Our WhoBao Bakery website will let users know current available drinks/baked goods and hold the 
                 items 15 minutes in advance which will affect those that wanted a particular item and can easily 
                 pick up their items to go/to find a seat by allowing users to skip the in-store ordering and same 
                 them time. We will measure effectiveness by tracking how many users take part in this feature, and 
@@ -63,32 +63,50 @@
             </p>
         </section>
         <section id = "body" class = "case-study-section">
-            <h1>Research</h1>
+            <h1>Understanding the user</h1>
             <h2>Target Audience</h2>
             <p> 19-40 year olds <br> college students and remote workers </p>
-
-            <h2> Competitive Analysis</h2>
+            <h2> User Research</h2>
             <p> - 85°  </p>
                 <!--insert the excel sheet -->
                 <div id="excel-container"></div>
             <h2>Personas</h2>
             <div class = "persona"> </div>
-            <img class="icons" src="../img/whobao/Felix User Persona.png" alt="Felix User Persona">
+            <img class="icons" src="../img/whobao/felix_user_persona.png" alt="Felix User Persona">
             <br>
-            <img class="icons" src="../img/whobao/Crystal User Persona.png" alt="Crystal User Persona">
+            <img class="icons" src="../img/whobao/crystal_user_persona.png" alt="Crystal User Persona">
+            <h2>Problem Statements</h2>
+            <p> #1: Felix is a student who concentrates with coffee and needs table space whenever he
+                visits his favorite bakery because he focuses better in an outdoor environment and 
+                has a hard time finding seats.</p>
+            <br>
+            <h2>User Journey Map</h2>
+            <embed src="../img/whobao/User Journey Map.pdf" type="application/pdf" width="80%" height="450px" />
             <h2> User Flow </h2>
             <div class = "user-flow">
-                <img class="icons" src="../img/whobao/order user flow.png" alt="Crystal User Persona">
+                <img class="icons" src="../img/whobao/order_user_flow.png" alt="Crystal User Persona">
             </div>
-            <h2> Low Fi Prototype </h2>
-            <div class = "low-fi">
-                <!--<img src={persona} className="persona-pic-travel" alt="persona-pic"/>-->
-            </div>
+            <br><br><br> <!--want to include a line in between-->
+            <h1>Starting the design</h1>
+            <h2> Digital wireframes</h2>
+            <h2> Low-Fidelity Prototype </h2>
+            <img class="icons" src="../img/whobao/wireframe.svg" alt="Digital Wireframe">
             <h2> High Fi Prototype</h2>
             <div class = "high-fi">
                 <!--<img src={persona} className="persona-pic-travel" alt="persona-pic"/>-->
             </div>
-            <h2> Conclusion and Further Steps</h2>
+            <h2>Usability Studies</h2>
+
+            <br><br><br> <!--want to include a line in between-->
+            <h1>Refining the Design</h1>
+            <h2>Mockups</h2>
+            <h2>High-fidelity prototype</h2>
+            <h2>Accessibility</h2>
+
+            <br><br><br> <!--want to include a line in between-->
+            <h1> Conclusion and Further Steps</h1>
+            <h2>Impact: </h2>
+            <h2>What I learned:</h2>
         </section>
     </div>
     </main>
